--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.breadcrumb li + li::before {
+  content: "\276F";
+  padding-left: 8px;
+  padding-right: 4px;
+  color: inherit;
+}
+
+.breadcrumb li span {
+  opacity: 60%;
+}
+
+#sidebar.show {
+  transform: translateX(0);
+}
+
+#sidebar ul li a.active {
+  background: #1f2937;
+  background-color: #1f2937;
+}
